Launch rocket and change status

--- a/rocket.html
+++ b/rocket.html
@@ -18,6 +18,7 @@
 
 <body>
 <button id="trigger">Launch the Rocket!</button>
+<h2 id="status">The Rocket is idle.</h2>
 <div id="space">
   <div id="rocket"><img src="rocket.png" height="120" alt="space rocket"/></div>
 </div>
@@ -27,6 +28,8 @@
 	//There are no access modifiers in javascript 
 	var rocket = document.getElementById("rocket"); 
 	var trigger = document.getElementById("trigger"); 
+	var stat = document.getElementById("status");
+	var pos = 0;
 	
 	//looks for an action 
 	//click is an event handler 
@@ -37,7 +40,9 @@
  //    alert ('Get inspired ;-\): https://www.w3schools.com/howto/howto_js_animate.asp');
 	// location.href = "https://www.w3schools.com/howto/howto_js_animate.asp";
 
-	
+	//anonymous function
+	setInterval(function(){pos++, rocket.style.bottom = pos + 'px'}, 5);
+	stat.innerHTML = 'Rocket has launched!';
 	
 	}
 	
